JSHManager ChangeLog

Version 0.2.1
-------------
- Added extra logging and improved error checking when logging in to
  ScoreHero.
- Added a new menu item to upload logs to pastebin.com in the
  Help -> View Log menu. After uploading, you can copy and paste the
  URLs when reporting an issue so that I can see the logging information.

Version 0.2.0
-------------
- Rock Band 1 and 2 are now supported. While it only took 35 characters
  to express that, I assure you, it took a significant effort to
  actually make it happen ;)
- Corrected issue when updating Guitar Hero song data that failed to
  update an existing song if new information had been discovered, such
  as a note count.
- When using the score editor panel to create and save a new score,
  the entire tree of scores is no longer reloaded.
- You can now more quickly enter a score via the score editor by
  clicking "Add score via editor" from the "Scores" menu or by pressing
  CTRL+N. This has the effect of toggling the editor if it is hidden
  and then pressing the "New" button in the editor.

Version 0.1.0
-------------
- Additional logging information is stored in data/logs.
- Corrected calculated rating rounding to be consistent with ScoreHero.
- Quick access to the Readme, ChangeLog, License, and logs has been added
  to the Help menu.
- Picture and video links are now saved when scores are downloaded.
- New scores can now be uploaded individually by first selecting the score
  and clicking "Upload Selected Score" in the "My Scores" menu or by
  pressing CTRL+U.
- The way passwords are stored has been changed to fix potential issues on
  some systems. If you previously saved your password, you will be required
  to re-save your password the next time you need to log in to ScoreHero.
- A new editor has been added that allows an image/video URL to be specified.
  This can be shown/hidden by clicking "Toggle Editor" in the "My Scores" menu