@@ -7,6 +7,8 @@ Version 0.2.1
 - Added a new menu item to upload logs to pastebin.com in the
   Help -> View Log menu. After uploading, you can copy and paste the
   URLs when reporting an issue so that I can see the logging information.
+- Added a new step to the score download wizard that allows you to download
+  scores for multiple platforms/difficulties/instruments in one shot.
 
 Version 0.2.0
 -------------
